Panorama audit import log code review (#16)